--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,17 @@
 }
 
 h2 {
+  color: #2E3440;
+  background-color: #8FBCBB;
+  border-radius: 6px;
+  padding: 10px;
   font-size: medium;
   font-weight: 200;
+}
+
+h2:hover {
+  color: #D8DEE9;
+  background-color: #B48EAD;
 }
 /* END SETUP */
 
@@ -32,6 +41,7 @@ h2 {
 }
 
 .threevert {
+  height: 33%;
 }
 
 .threehoriz {
@@ -59,6 +69,10 @@ h2 {
 
 /* QUESTION 1 */
 
+.red {
+  background-color: red;
+}
+
 .orange {
   background-color: orange;
 }
@@ -75,7 +89,7 @@ h2 {
   background-color: blue;
 }
 
-.lightblue {
+.light-blue {
   background-color: lightblue;
 }
 
@@ -83,7 +97,7 @@ h2 {
   background-color: purple;
 }
 
-.white {
+#white {
   background-color: #fff;
 }
 
@@ -93,16 +107,22 @@ h2 {
 
 /* BEGIN QUESTION 2 */
 
+.thailand-red,
+.thailand-white {
+  height: 16%;
+}
+
 .thailand-red {
-  /* TODO */
+  background-color: #B5002D;
 }
 
 .thailand-white {
-  /* TODO */
+  background-color: white;
 }
 
 .thailand-blue {
-  /* TODO */
+  background-color: #2E2A4C;
+  height: 36%;
 }
 
 /* END QUESTION 2 */
@@ -129,7 +149,9 @@ h2 {
 }
 
 .mexico-img {
-  /* TODO */
+  max-height: 50%;
+  max-width: 50%;
+  align-self: center;
 }
 
 .mexico-red {
@@ -149,17 +171,17 @@ h2 {
 /* For margin practice */
 .flag1 {
   background-color: red;
-  /* TODO */
+  margin-right: 5px;
 }
 
 .flag2 {
   background-color: blue;
-  /* TODO */
+  margin-left: 5px;
 }
 /* For padding practice */
 .padding-container {
   box-sizing: border-box;
   background-color: lightblue;
   background-clip: content-box, padding-box;
-  /* TODO */
+  padding: 15%;
 }
